# Friday-Zero-barrier-DeepSeek-Agent-for-Windows

./: .gitignore  CHANGELOG.md  DESIGN.md  PRODUCT.md  README.md  friday.spec  long-term-plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  run.py
assets/: changelog.json
docs/: AGENT-SAFETY.md  FRIDAY-DEV-MANUAL.md  RELEASE.md  WEBSITE.md  a11y-baseline.md  context-session-plan.md  design-token-audit.md  image-gen.md
friday/: agent.py  agent_context.py  api_connect.py  approval_descriptions.py  artifacts.py  autostart.py  brain.py  bundled.py  category_profiles.py  changelog.py  checkpoint_writer.py  config.py  context.py  context_assembler.py  crash_handler.py  credentials_store.py  desktop.py  diagnostics_bundle.py  dream_task.py  edition.py  error_hints.py  fast_finish.py  file_diff.py  goal_verifier.py  health_check.py  history_index.py  image_gen.py  instance_lock.py  logging_config.py  mcp_client.py  net.py  openclaw_autostart.py  os_path_guard.py  paste_images.py  plan.py  plugins.py  portability.py  portable_bundle.py  prefix_cache.py  python_code_safety.py  (+20 more)
installer/: friday.iss
release/: create-shortcut.ps1  创建桌面快捷方式.ps1  安装教程.txt  解除锁定.ps1  首次安装.ps1
scripts/: README.md  _weixin_login_probe.py  _weixin_probe.py  _weixin_search_probe.py  build.ps1  bump-version.cmd  bump-version.ps1  create-dev-shortcut.cmd  create_shortcut.ps1  deploy-gitee-pages.cmd  deploy-gitee-pages.ps1  deploy_gitee_pages.py  friday-dist.ps1  generate_optimization_docx.py  install-friday-autostart.cmd  install-friday-autostart.ps1  install-friday-weixin-bridge.ps1  (+36 more)
(+163 files in other folders)
